# docs/swagger.json
@@ -10,7 +10,7 @@
     "paths": {
         "/paste": {
             "post": {
-                "description": "새로운 Paste 텍스트를 생성하고 저장합니다.\nexpire",
+                "description": "새로운 Paste 텍스트를 생성하고 저장합니다.",
                 "consumes": [
                     "application/json"
                 ],
@@ -184,6 +184,42 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "description": "Paste 텍스트를 삭제합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pastes:test"
+                ],
+                "summary": "Paste 삭제",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Paste ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ResponseFormat"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ResponseFormat"
+                        }
+                    }
+                }
             }
         }
     },
@@ -219,6 +255,7 @@
             "required": [
                 "content",
                 "expire",
+                "language",
                 "title"
             ],
             "properties": {
@@ -238,6 +275,9 @@
                         }
                     ]
                 },
+                "language": {
+                    "type": "string"
+                },
                 "title": {
                     "type": "string"
                 }
@@ -246,6 +286,7 @@
         "model.PasteResponse": {
             "type": "object",
             "required": [
+                "language",
                 "title"
             ],
             "properties": {
@@ -261,6 +302,26 @@
                 "id": {
                     "type": "string",
                     "example": "abc123"
+                },
+                "language": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.PasteUpdateRequest": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "expire": {
+                    "$ref": "#/definitions/model.ExpireOption"
+                },
+                "language": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
