# internal/model/rest.go
@@ -6,14 +6,22 @@ type ExpiredTypeResponse struct {
 }
 
 type PasteRequest struct {
-	Title   string       `json:"title" binding:"required"`
-	Content string       `json:"content" binding:"required"`
-	Expire  ExpireOption `json:"expire" binding:"required,oneof=1 2 3 4"`
+	Title    string       `json:"title" binding:"required"`
+	Content  string       `json:"content" binding:"required"`
+	Language string       `json:"language" binding:"required"`
+	Expire   ExpireOption `json:"expire" binding:"required,oneof=1 2 3 4" enums:"1,2,3,4"`
 }
 
+type PasteUpdateRequest struct {
+	Title    *string       `json:"title,omitempty"`
+	Content  *string       `json:"content,omitempty"`
+	Language *string       `json:"language"`
+	Expire   *ExpireOption `json:"expire,omitempty"`
+}
 type PasteResponse struct {
 	ID        string `json:"id,omitempty" example:"abc123"`
 	Title     string `json:"title" binding:"required"`
+	Language  string `json:"language" binding:"required"`
 	CreatedAt string `json:"created_at,omitempty"`
 	ExpiresAt string `json:"expires_at,omitempty"`
 	Content   string `json:"content,omitempty"`
